# Morpheus

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  morpheus.yaml.example  pyproject.toml
.ci/: mock-safe.yaml
.github/workflows/: ci.yml
scenarios/core/: pack.yaml
scenarios/core/authorization_bypass/: privilege_escalation.yaml  system_prompt_exfil_encoded.yaml  system_prompt_extraction.yaml
scenarios/core/data_poisoning/: misinformation_seeding.yaml  poisoned_knowledge_base.yaml
scenarios/core/indirect_injection/: history_injection.yaml  poisoned_document.yaml  tool_output_injection.yaml
scenarios/core/pii_exfiltration/: bulk_customer_dump.yaml  cross_tenant_leak.yaml
scenarios/core/prompt_injection/: dan_jailbreak.yaml  direct_override.yaml  unicode_injection.yaml
scenarios/core/tool_abuse/: args_injection.yaml  destructive_delete.yaml  ssrf_metadata.yaml
scenarios/core/unsafe_autonomy/: autonomous_exfiltration.yaml  irreversible_action.yaml
src/morpheus/: __init__.py  __main__.py  cli.py  config.py  detectors.py  mappings.py  models.py  reporter.py  runner.py  scenario.py  scorer.py  suites.py
src/morpheus/adapters/: __init__.py  azure_foundry.py  base.py  bedrock.py  http_generic.py  mock.py  openai_assistants.py  vertex.py
src/morpheus/templates/: report.html.tmpl
tests/: conftest.py  test_cli.py  test_config.py  test_detectors.py  test_http_adapter.py  test_mappings.py  test_mock_adapter.py  test_models.py  test_reporter.py  test_runner.py  test_scaffold_adapters.py  test_scenario_loader.py  test_scorer.py
