[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "morpheus"
version = "0.1.0"
description = "Morpheus: an open evaluation harness that runs attack scenarios against cloud-deployed AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Morpheus contributors" }]
keywords = ["ai-security", "llm", "red-team", "evaluation", "atlas", "owasp"]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
report = ["jinja2>=3.0"]
bedrock = ["boto3>=1.34"]
azure = ["azure-ai-projects>=1.0.0b1", "azure-identity>=1.15"]
openai = ["openai>=1.0"]
vertex = ["google-cloud-aiplatform>=1.40"]

[project.scripts]
morpheus = "morpheus.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
morpheus = ["templates/*.tmpl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
